// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntrySidebar/TranslationWidget when single locale mode is off should match snapshot 1`] = `
<EntrySidebarWidget
  headerNode={
    <Select
      className="entity-sidebar__select"
      hasError={false}
      isDisabled={false}
      onChange={[Function]}
      required={false}
      testId="cf-ui-select"
      value="multiple"
      width="auto"
    >
      <Option
        value="multiple"
      >
        Multiple locales
      </Option>
      <Option
        value="single"
      >
        Single locale
      </Option>
    </Select>
  }
  testId="sidebar-translation-widget"
  title="Translation"
>
  <TranslationWidgetPills
    emitter={
      Object {
        "emit": [MockFunction],
      }
    }
    isSingleLocaleModeOn={false}
    localeData={
      Object {
        "activeLocales": Array [
          Object {
            "default": true,
            "internal_code": "en-US",
          },
          Object {
            "default": false,
            "internal_code": "de-DE",
          },
          Object {
            "default": false,
            "internal_code": "es-AR",
          },
          Object {
            "default": false,
            "internal_code": "ru",
          },
        ],
        "errors": Object {},
        "focusedLocale": Object {
          "default": true,
          "internal_code": "en-US",
        },
        "isLocaleActive": [Function],
        "isSingleLocaleModeOn": false,
        "privateLocales": Array [
          Object {
            "default": true,
            "internal_code": "en-US",
          },
          Object {
            "default": false,
            "internal_code": "de-DE",
          },
          Object {
            "default": false,
            "internal_code": "es-AR",
          },
          Object {
            "default": false,
            "internal_code": "ru",
          },
        ],
      }
    }
  />
</EntrySidebarWidget>
`;

exports[`EntrySidebar/TranslationWidget when single locale mode is on should match snapshot 1`] = `
<EntrySidebarWidget
  headerNode={
    <Select
      className="entity-sidebar__select"
      hasError={false}
      isDisabled={false}
      onChange={[Function]}
      required={false}
      testId="cf-ui-select"
      value="multiple"
      width="auto"
    >
      <Option
        value="multiple"
      >
        Multiple locales
      </Option>
      <Option
        value="single"
      >
        Single locale
      </Option>
    </Select>
  }
  testId="sidebar-translation-widget"
  title="Translation"
>
  <TranslationWidgetPills
    emitter={
      Object {
        "emit": [MockFunction],
      }
    }
    isSingleLocaleModeOn={true}
    localeData={
      Object {
        "activeLocales": Array [
          Object {
            "default": true,
            "internal_code": "en-US",
          },
          Object {
            "default": false,
            "internal_code": "de-DE",
          },
          Object {
            "default": false,
            "internal_code": "es-AR",
          },
          Object {
            "default": false,
            "internal_code": "ru",
          },
        ],
        "errors": Object {},
        "focusedLocale": Object {
          "default": true,
          "internal_code": "en-US",
        },
        "isLocaleActive": [Function],
        "isSingleLocaleModeOn": false,
        "privateLocales": Array [
          Object {
            "default": true,
            "internal_code": "en-US",
          },
          Object {
            "default": false,
            "internal_code": "de-DE",
          },
          Object {
            "default": false,
            "internal_code": "es-AR",
          },
          Object {
            "default": false,
            "internal_code": "ru",
          },
        ],
      }
    }
  />
</EntrySidebarWidget>
`;
